# users-groups-mcp-server

./: .env.example  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: lint.yml  test.yml
src/: envs.py  main.py  storage.py
src/user_group_db/: models.py
test/: conftest.py  test_storage.py
test/user_group/: conftest.py  test_group.py  test_user.py
