[project]
name = "users-groups-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.11.3",
    "httpx>=0.28.1",
    "pre-commit>=4.3.0",
    "pytest-mock>=3.14.1",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]
